2007-05-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp:	fixed edit_text bug for Flash 8

2007-05-15  Vitaly Alexeev <tishka92@yahoo.com>

	* base/jpeg.cpp: fixed bug that is shown at playing Flash 8 files
	* gameswf/gameswf_font.*,
	* gameswf/gameswf_impl.*,
	* gameswf/gameswf_action.cpp,
	* gameswf/gameswf_styles.cpp,
	* gameswf/gameswf_text.cpp,
	* gameswf/gameswf.h:
	Work on maintenance of compatibility with Flash 8

2007-05-13  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/plugins/lib3ds/gameswf_3ds.*: inhibited till the best times
	* gameswf/gameswf_font.*
	* gameswf/gameswf_impl.*
	* gameswf/gameswf_stream.*
	* gameswf/gameswf_styles.*
	* gameswf/gameswf_shape.cpp:
	added readers of DefineFont3, DefineShape4, DefineFileAttribute & DefineFontAlignZones tags

2007-05-06  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/plugins/lib3ds/gameswf_3ds.*: more readable, fixed memory leak & cleanup
	* gameswf/gameswf_render_handler_ogl.cpp: 
	added m_texture=0 operator after glDeleteTexture() for debuging memory leaks

2007-05-03  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_environment.cpp: in load_file() function strncmp() ==> strnicmp()
	* gameswf/gameswf_3ds.*: added texturing of 3D model
	* gameswf/plugins/lib3ds/test.(fla,swf): updated
	* gameswf/plugins/lib3ds/cup.3ds: removed (since does not contains texture)
	* gameswf/plugins/lib3ds/books.3ds: added 3D model that contains texture
	
2007-05-02  Thatcher Ulrich <tu@tulrich.com>

	Misc build fixes & cleanup.
	
	* base/tu_config.h: by default, don't link to MySQL, LIB3DS,
	FFMPEG
	* gameswf/Makefile: update filelist with newer files
	* gameswf/*: normalize include file paths -- no relative paths;
	path is always relative to project root.

2007-05-01  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_3ds.*: moved to gameswf/plugins/lib3ds/ directory
	* gameswf/plugins/lib3ds/test.(fla,swf): added testcase 